https://xxxxx.supabase.co e eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
-    const SUPABASE_URL = "SUA_URL_AQUI";
-    const SUPABASE_ANON_KEY = "SUA_CHAVE_ANON_AQUI";
+    const SUPABASE_URL = "https://xxxxx.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...";
 
     let supabase = null;
 
