--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
       background-color: #45a049;
     }
 
-    button:active {
-      background-color: #3d8b40;
-    }
-
     #lista {
       list-style: none;
     }
@@ -113,6 +109,7 @@
   </style>
 </head>
 <body>
+
   <h1>Catálogo de Livros</h1>
 
   <div id="mensagem"></div>
@@ -124,31 +121,23 @@
   </div>
 
   <div id="carregando" class="carregando" style="display: none;">Carregando...</div>
+
   <ul id="lista"></ul>
 
+  <!-- Supabase -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+
   <script>
-    const SUPABASE_URL = "https://xxxxx.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...";
+    const SUPABASE_URL = "https://vpezzxcxfsubfjztjnyz.supabase.co";
+    const SUPABASE_ANON_KEY = "sb_publishable_9iYYA4yCVI1Ec5-0hzmnOw_0Gxd4Fd9";
 
-    let supabase = null;
-
-    try {
-      supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-    } catch (erro) {
-      exibirMensagem('Erro ao conectar com Supabase. Verifique suas credenciais.', 'erro');
-    }
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     function exibirMensagem(texto, tipo = 'info') {
-      const msgDiv = document.getElementById('mensagem');
-      msgDiv.textContent = texto;
-      msgDiv.className = tipo;
-      if (tipo !== 'info') {
-        setTimeout(() => {
-          msgDiv.textContent = '';
-          msgDiv.className = '';
-        }, 3000);
-      }
+      const msg = document.getElementById('mensagem');
+      msg.textContent = texto;
+      msg.className = tipo;
+      setTimeout(() => { msg.textContent = ""; msg.className = ""; }, 3000);
     }
 
     function mostrarCarregando(mostrar) {
@@ -156,80 +145,66 @@
     }
 
     async function carregar() {
-      if (!supabase) return;
-
       try {
         mostrarCarregando(true);
+        
         const { data, error } = await supabase
           .from('livros')
           .select('*')
           .order('created_at', { ascending: false });
 
-        if (error) {
-          throw error;
-        }
+        if (error) throw error;
 
         const lista = document.getElementById('lista');
-        if (data.length === 0) {
-          lista.innerHTML = '<li style="background-color: #f0f0f0; border-left: none; text-align: center; color: #999;">Nenhum livro cadastrado</li>';
+
+        if (!data || data.length === 0) {
+          lista.innerHTML =
+            '<li style="background:#f0f0f0; border-left:none; text-align:center; color:#999;">Nenhum livro cadastrado</li>';
         } else {
           lista.innerHTML = data
             .map(l => `<li><strong>${l.titulo}</strong> — ${l.autor}</li>`)
             .join('');
         }
       } catch (erro) {
-        console.error('Erro ao carregar livros:', erro);
-        exibirMensagem('Erro ao carregar livros: ' + erro.message, 'erro');
+        console.error(erro);
+        exibirMensagem("Erro ao carregar livros: " + erro.message, "erro");
       } finally {
         mostrarCarregando(false);
       }
     }
 
     async function adicionar() {
-      if (!supabase) {
-        exibirMensagem('Conexão com Supabase não foi estabelecida', 'erro');
-        return;
-      }
-
       const titulo = document.getElementById('titulo').value.trim();
       const autor = document.getElementById('autor').value.trim();
 
       if (!titulo || !autor) {
-        exibirMensagem('Preencha título e autor', 'erro');
+        exibirMensagem("Preencha título e autor", "erro");
         return;
       }
 
       try {
-        const { error } = await supabase.from('livros').insert({ titulo, autor });
+        const { error } = await supabase
+          .from('livros')
+          .insert({ titulo, autor });
 
-        if (error) {
-          throw error;
-        }
+        if (error) throw error;
 
-        document.getElementById('titulo').value = '';
-        document.getElementById('autor').value = '';
+        document.getElementById('titulo').value = "";
+        document.getElementById('autor').value = "";
 
-        exibirMensagem('Livro adicionado com sucesso!', 'sucesso');
+        exibirMensagem("Livro adicionado!", "sucesso");
         carregar();
+
       } catch (erro) {
-        console.error('Erro ao adicionar livro:', erro);
-        exibirMensagem('Erro ao adicionar livro: ' + erro.message, 'erro');
+        console.error(erro);
+        exibirMensagem("Erro ao adicionar: " + erro.message, "erro");
       }
     }
 
-    document.getElementById('add').onclick = adicionar;
-    document.getElementById('titulo').onkeypress = (e) => {
-      if (e.key === 'Enter') {
-        document.getElementById('autor').focus();
-      }
-    };
-    document.getElementById('autor').onkeypress = (e) => {
-      if (e.key === 'Enter') {
-        adicionar();
-      }
-    };
+    document.getElementById("add").onclick = adicionar;
 
     carregar();
   </script>
+
 </body>
 </html>
